--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -1,7 +1,19 @@
-<style>
-    .body{
-        margin: 0;
-    }
-</style>
-<canvas></canvas>
-<script src="./index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Canvas Game</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: black;
+            overflow: hidden;
+        }
+    </style>
+</head>
+<body>
+    <canvas></canvas>
+    <script src="./index.js"></script> <!-- Ensure the file exists in the same directory -->
+</body>
+</html>
