--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Game</title>
+    <title>Asteroids</title>
     <style>
         body {
             margin: 0;
@@ -14,6 +14,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="./index.js"></script> <!-- Ensure the file exists in the same directory -->
+    <script src="./index.js"></script>
 </body>
 </html>
